[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/ButtonRed.gd" type="Script" id=1]
[ext_resource path="res://Assets/ButtonsAndBlocks/switchRed_pressed.png" type="Texture" id=2]
[ext_resource path="res://Assets/ButtonsAndBlocks/switchRed.png" type="Texture" id=3]
[ext_resource path="res://Shapes/ButtonCollisionShapeBase.tres" type="Shape2D" id=4]
[ext_resource path="res://Shapes/ButtonCollisonShapeTop.tres" type="Shape2D" id=5]
[ext_resource path="res://Assets/sounds/switch23.ogg" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "up",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 7.25 )

[node name="ButtonRed" type="StaticBody2D"]
collision_layer = 8
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -32 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "up"

[node name="CollisionShapeTop" type="CollisionShape2D" parent="."]
position = Vector2( 0, -33 )
rotation = 1.57079
shape = ExtResource( 5 )

[node name="CollisionShapeDown3" type="CollisionShape2D" parent="."]
position = Vector2( 0, -11 )
rotation = 1.57079
shape = ExtResource( 4 )
disabled = true

[node name="TopChecker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopChecker"]
position = Vector2( 0, -46 )
shape = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Effects"

[node name="CollisionShapeDown" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7.25 )
shape = SubResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="TopChecker" to="." method="_on_TopChecker_body_entered"]
[connection signal="body_exited" from="TopChecker" to="." method="_on_TopChecker_body_exited"]
